--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   <header>
     <div class="content">
       <div class="logo">
-        <img target="_blank" class="icon" src="./resources\images\ic-logo.svg"/>
+        <img alt="Logo"  class="icon" src="./resources\images\ic-logo.svg"/>
         <a id="logo-link-colmar" href="#" >COLMAR</a><a id="logo-link-academy" href="#">ACADEMY</a>
       </div>
       <nav class="desktop">
         <ul>
           <li><a href="#">On campus</a></li>
           <li><a href="#">Online</a></li>
-          <li><a href="#">Companies</a></li>
+          <li><a href="#">On campus</a></li>
           <li><a href="#">Sign in</a></li>
         </ul>
       </nav>
        <nav class="mobile">
         <ul>
-          <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
-          <li><a href="#"><img src="./resources\images\ic-on-campus.svg"></a></li>
-          <li><a href="#"><img src="./resources\images\ic-online.svg"></a></li>
-          <li><a href="#"><img src="./resources\images\ic-login.svg"></a></li>
+          <li><a href="#"><img alt="Logo" src="./resources/images/ic-logo.svg"></a></li>
+          <li><a href="#"><img alt="Campus" src="./resources\images\ic-on-campus.svg"></a></li>
+          <li><a href="#"><img alt="Online" src="./resources\images\ic-online.svg"></a></li>
+          <li><a href="#"><img alt="Login" src="./resources\images\ic-login.svg"></a></li>
         </ul>
       </nav>
     </div>
@@ -37,7 +37,7 @@
     <!-- Banner -->
     <div class="banner-desktop">
       <div class="image-container-big">
-        <img target="_blank" class="" src="./resources\images\banner.jpg"/>
+        <img alt="Our students studying"   class="" src="./resources\images\banner.jpg"/>
       </div>
       <div class = "banner-text">
         <h1>Learn something new everyday</h1>
@@ -48,7 +48,7 @@
 
     <div class="banner-mobile">
       <div class="image-container-big">
-        <img target="_blank" class="" src="./resources\images\banner.jpg"/>
+        <img alt="Our students studying"   class="" src="./resources\images\banner.jpg"/>
       </div>
       <div class = "banner-text">
         <h1>Learn something new everyday</h1>
@@ -61,7 +61,7 @@
     <div class="info">
       <div class="article">
         <div class="image-container-article">
-          <img target="_blank" class="" src="./resources\images\information-main.jpg"/>
+          <img alt="Studying in our academy is fun"   class="" src="./resources\images\information-main.jpg"/>
         </div>
         <div class="article-text">
           <h1>It doesn't hurt to keep practicing</h1>
@@ -74,10 +74,10 @@
         <div class="stories">
           <div class="story">
             <div class="image-story">
-              <img target="_blank" src="./resources\images\information-orientation.jpg"/>
+              <img alt="Students are going to the lecture"  src="./resources\images\information-orientation.jpg"/>
             </div>
             <div class="image-story-mobile">
-              <img target="_blank" src="./resources\images\information-orientation-mobile.jpg"/>
+              <img alt="Students are going to the lecture" src="./resources\images\information-orientation-mobile.jpg"/>
             </div>
             <div class="text-story">
               <h2>Orientation date</h2>
@@ -87,10 +87,10 @@
           </div>
           <div class="story">
             <div class="image-story">
-              <img target="_blank" src="./resources\images\information-campus.jpg"/>
+              <img  alt="A studying room" src="./resources\images\information-campus.jpg"/>
             </div>
             <div class="image-story-mobile">
-              <img target="_blank" src="./resources\images\information-campus-mobile.jpg"/>
+              <img  alt="A studying room" src="./resources\images\information-campus-mobile.jpg"/>
             </div>
             <div class="text-story">
               <h2>Our campus</h2>
@@ -100,10 +100,10 @@
           </div>
           <div class="story" id= "lecture">
             <div class="image-story">
-              <img target="_blank" src="./resources\images\information-guest-lecture.jpg"/>
+              <img  alt = "A famous professor" src="./resources\images\information-guest-lecture.jpg"/>
             </div>
             <div class="image-story-mobile">
-              <img target="_blank" src="./resources\images\information-guest-lecture-mobile.jpg"/>
+              <img  alt = "A famous professor" src="./resources\images\information-guest-lecture-mobile.jpg"/>
             </div>
             <div class="text-story">
               <h2 id="guest-desc">Our guest lecture</h2>
@@ -121,7 +121,7 @@
       <div class="subjects-descr">
         <div class="subject-container">
             <div class="image-subject">
-              <img target="_blank" src="./resources\images\course-software.jpg"/>
+              <img alt="Computers"  src="./resources\images\course-software.jpg"/>
             </div>
             <div class="text-subject">
               <h2>Software engineering</h2>
@@ -131,7 +131,7 @@
         </div>
         <div class="subject-container">
             <div class="image-subject">
-              <img target="_blank" src="./resources\images\course-computer-art.jpg"/>
+              <img  alt="Mobile phone" src="./resources\images\course-computer-art.jpg"/>
             </div>
             <div class="text-subject">
               <h2>Computer art</h2>
@@ -141,7 +141,7 @@
         </div>
         <div class="subject-container">
             <div class="image-subject">
-              <img target="_blank" src="./resources\images\course-design.jpg"/>
+              <img alt="A student with a camera"  src="./resources\images\course-design.jpg"/>
             </div>
             <div class="text-subject">
               <h2>Design</h2>
@@ -151,7 +151,7 @@
         </div>
         <div class="subject-container">
             <div class="image-subject">
-              <img target="_blank" src="./resources\images\course-data.jpg"/>
+              <img alt="A laptop with data graphs"  src="./resources\images\course-data.jpg"/>
             </div>
             <div class="text-subject">
               <h2>Data</h2>
@@ -161,7 +161,7 @@
         </div>
         <div class="subject-container">
             <div class="image-subject">
-              <img target="_blank" src="./resources\images\course-business.jpg"/>
+              <img alt="Chessmen"  src="./resources\images\course-business.jpg"/>
             </div>
             <div class="text-subject">
               <h2>Business</h2>
@@ -171,7 +171,7 @@
         </div>
         <div class="subject-container">
             <div class="image-subject">
-              <img target="_blank" src="./resources\images\course-marketing.jpg"/>
+              <img alt="Smart watch"  src="./resources\images\course-marketing.jpg"/>
             </div>
             <div class="text-subject">
               <h2>Marketing</h2>
@@ -187,7 +187,7 @@
       <div class="info">
         <div class="article">
           <div class="video-container">
-            <video controls target="_blank" class="" src="./resources\videos\thesis.mp4"/>
+            <video controls   class="" src="./resources\videos\thesis.mp4"/>
           </div>
           <div class="urban-text">
             <h2>Reimagine urban</h2>
@@ -197,12 +197,12 @@
           </div>
         </div>
         <div class="video-container-mobile">
-          <video controls target="_blank" class="" src="./resources\videos\thesis.mp4"/>
+          <video controls   class="" src="./resources\videos\thesis.mp4"/>
         </div>
           <div class="stories">
             <div class="story" id="fisma">
               <div class="image-story" >
-                <img target="_blank" src="./resources\images\thesis-fisma.jpg"/>
+                <img  alt="Prototyping" src="./resources\images\thesis-fisma.jpg"/>
               </div>
               <div class="text-story" >
                 <h2>Fisma: Design and Prototype</h2>
@@ -211,7 +211,7 @@
             </div>
             <div class="story">
               <div class="image-story">
-                <img target="_blank" src="./resources\images\thesis-now-and-then.jpg"/>
+                <img  alt="New York" src="./resources\images\thesis-now-and-then.jpg"/>
               </div>
               <div class="text-story">
                 <h2>Now and then</h2>
