Add updated text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav class="desktop">
         <ul>
-          <li><a href="#">On campus</a></li>
+          <li><a href="#">On campus (added text here)</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">On campus</a></li>
           <li><a href="#">Sign in</a></li>
